@@ -1,7 +1,8 @@
 plugins {
   id 'java-library'
   id 'checkstyle'
-  id 'net.ltgt.errorprone' version '1.3.0'
+  // Doesn't work with Java 16
+  //id 'net.ltgt.errorprone' version '1.3.0'
 }
 
 group 'me.hugmanrique'
@@ -9,11 +10,12 @@ version '0.0.1-SNAPSHOT'
 
 ext {
   junitVersion = '5.7.0'
+  incubatorArgs = ['--add-modules', 'jdk.incubator.foreign']
 }
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_15
-  targetCompatibility = JavaVersion.VERSION_15
+  modularity.inferModulePath = true
+  toolchain.languageVersion = JavaLanguageVersion.of(16)
 }
 
 repositories {
@@ -22,23 +24,19 @@ repositories {
 
 dependencies {
   compileOnlyApi 'org.checkerframework:checker-qual:3.8.0'
-  errorprone 'com.google.errorprone:error_prone_core:2.4.0'
+  //errorprone 'com.google.errorprone:error_prone_core:2.5.1'
   testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
   testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
 
 tasks.withType(JavaCompile).configureEach {
-  // https://github.com/google/error-prone/issues/1647
-  options.errorprone.disable('UnnecessaryParentheses')
-}
-
-jar {
-  manifest.attributes(
-    'Automatic-Module-Name': 'me.hugmanrique.cartage'
-  )
+  options.compilerArgs += incubatorArgs
+  //// https://github.com/google/error-prone/issues/1647
+  //options.errorprone.disable('UnnecessaryParentheses')
 }
 
 checkstyle {
+  toolVersion = '8.38'
   // Fail build if there's any violations
   maxErrors = 0
   maxWarnings = 0
@@ -46,4 +44,5 @@ checkstyle {
 
 test {
   useJUnitPlatform()
+  jvmArgs += incubatorArgs
 }
